posfixo/posfixo.output
Terminals unused in grammar

    ABRE_PARENTESES
    FECHA_PARENTESES


Grammar

    0 $accept: expr $end

    1 expr: expr MAIS termoInt
    2     | expr MENOS termoInt
    3     | termoInt
    4     | termoBool

    5 termoInt: termoInt ASTERISCO fatorInt
    6         | termoInt DIV fatorInt
    7         | fatorInt

    8 termoBool: termoBool AND fatorBool
    9          | termoBool OR fatorBool
   10          | fatorBool

   11 fatorInt: IDENTA

   12 fatorBool: IDENTB


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTA (258) 11
    IDENTB (259) 12
    MAIS (260) 1
    MENOS (261) 2
    OR (262) 9
    ASTERISCO (263) 5
    DIV (264) 6
    ABRE_PARENTESES (265)
    FECHA_PARENTESES (266)
    AND (267) 8


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    expr (14)
        on left: 1 2 3 4
        on right: 0 1 2
    termoInt (15)
        on left: 5 6 7
        on right: 1 2 3 5 6
    termoBool (16)
        on left: 8 9 10
        on right: 4 8 9
    fatorInt (17)
        on left: 11
        on right: 5 6 7
    fatorBool (18)
        on left: 12
        on right: 8 9 10


State 0

    0 $accept: . expr $end

    IDENTA  shift, and go to state 1
    IDENTB  shift, and go to state 2

    expr       go to state 3
    termoInt   go to state 4
    termoBool  go to state 5
    fatorInt   go to state 6
    fatorBool  go to state 7


State 1

   11 fatorInt: IDENTA .

    $default  reduce using rule 11 (fatorInt)


State 2

   12 fatorBool: IDENTB .

    $default  reduce using rule 12 (fatorBool)


State 3

    0 $accept: expr . $end
    1 expr: expr . MAIS termoInt
    2     | expr . MENOS termoInt

    $end   shift, and go to state 8
    MAIS   shift, and go to state 9
    MENOS  shift, and go to state 10


State 4

    3 expr: termoInt .
    5 termoInt: termoInt . ASTERISCO fatorInt
    6         | termoInt . DIV fatorInt

    ASTERISCO  shift, and go to state 11
    DIV        shift, and go to state 12

    $default  reduce using rule 3 (expr)


State 5

    4 expr: termoBool .
    8 termoBool: termoBool . AND fatorBool
    9          | termoBool . OR fatorBool

    OR   shift, and go to state 13
    AND  shift, and go to state 14

    $default  reduce using rule 4 (expr)


State 6

    7 termoInt: fatorInt .

    $default  reduce using rule 7 (termoInt)


State 7

   10 termoBool: fatorBool .

    $default  reduce using rule 10 (termoBool)


State 8

    0 $accept: expr $end .

    $default  accept


State 9

    1 expr: expr MAIS . termoInt

    IDENTA  shift, and go to state 1

    termoInt  go to state 15
    fatorInt  go to state 6


State 10

    2 expr: expr MENOS . termoInt

    IDENTA  shift, and go to state 1

    termoInt  go to state 16
    fatorInt  go to state 6


State 11

    5 termoInt: termoInt ASTERISCO . fatorInt

    IDENTA  shift, and go to state 1

    fatorInt  go to state 17


State 12

    6 termoInt: termoInt DIV . fatorInt

    IDENTA  shift, and go to state 1

    fatorInt  go to state 18


State 13

    9 termoBool: termoBool OR . fatorBool

    IDENTB  shift, and go to state 2

    fatorBool  go to state 19


State 14

    8 termoBool: termoBool AND . fatorBool

    IDENTB  shift, and go to state 2

    fatorBool  go to state 20


State 15

    1 expr: expr MAIS termoInt .
    5 termoInt: termoInt . ASTERISCO fatorInt
    6         | termoInt . DIV fatorInt

    ASTERISCO  shift, and go to state 11
    DIV        shift, and go to state 12

    $default  reduce using rule 1 (expr)


State 16

    2 expr: expr MENOS termoInt .
    5 termoInt: termoInt . ASTERISCO fatorInt
    6         | termoInt . DIV fatorInt

    ASTERISCO  shift, and go to state 11
    DIV        shift, and go to state 12

    $default  reduce using rule 2 (expr)


State 17

    5 termoInt: termoInt ASTERISCO fatorInt .

    $default  reduce using rule 5 (termoInt)


State 18

    6 termoInt: termoInt DIV fatorInt .

    $default  reduce using rule 6 (termoInt)


State 19

    9 termoBool: termoBool OR fatorBool .

    $default  reduce using rule 9 (termoBool)


State 20

    8 termoBool: termoBool AND fatorBool .

    $default  reduce using rule 8 (termoBool)
